tests/expected/recovery/declarations/002_class_member_broken.txt
{
  "type": "Program",
  "start": 0,
  "end": 127,
  "sourceType": "script",
  "hashbang": null,
  "body": [
    {
      "type": "ClassDeclaration",
      "start": 50,
      "end": 94,
      "id": {
        "type": "Identifier",
        "start": 56,
        "end": 62,
        "name": "Broken"
      },
      "superClass": null,
      "body": {
        "type": "ClassBody",
        "start": 63,
        "end": 94,
        "body": [
          {
            "type": "PropertyDefinition",
                        "start": 88,
            "end": 90,
                        "key": {
              "type": "Literal",
              "start": 88,
              "end": 89,
              "value": 1,
              "raw": "1"
            },
            "value": null,
            "computed": false,
            "static": false
          }
        ]
      }    },
    {
      "type": "VariableDeclaration",
      "start": 97,
      "end": 126,
      "kind": "const",
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 103,
          "end": 125,
          "id": {
            "type": "Identifier",
            "start": 103,
            "end": 121,
            "name": "anchor_after_error"          },
          "init": {
            "type": "Literal",
            "start": 124,
            "end": 125,
            "value": 1,
            "raw": "1"          }        }
      ]    }
  ],
  "comments": [
    {
      "type": "Line",
      "start": 0,
      "end": 49,
      "value": " Class declaration with a broken method header."
    }
  ],
  "errors": [
    {
      "code": "K3053",
      "severity": "error",
      "message": "Reserved word 'return' is not a valid binding identifier",
      "line": 4,
      "column": 12,
      "offset": 88
    },
    {
      "code": "K2002",
      "severity": "error",
      "message": "Expected '}', got numeric literal '1'",
      "line": 4,
      "column": 12,
      "offset": 88
    },
    {
      "code": "K2002",
      "severity": "error",
      "message": "Expected ')', got numeric literal '1'",
      "line": 4,
      "column": 12,
      "offset": 88
    },
    {
      "code": "K2040",
      "severity": "error",
      "message": "Unexpected '}' — unmatched closing brace",
      "line": 6,
      "column": 1,
      "offset": 95
    }
  ]
}
error[K3053]: Reserved word 'return' is not a valid binding identifier
  --> /Users/kakurega/dev/projects/kessel/tests/runners/../fixtures/recovery/declarations/002_class_member_broken.js:4:12
   |
 4 |     return 1;
   |            ^

error[K2002]: Expected '}', got numeric literal '1'
  --> /Users/kakurega/dev/projects/kessel/tests/runners/../fixtures/recovery/declarations/002_class_member_broken.js:4:12
   |
 4 |     return 1;
   |            ^
  = note: see TS1005

error[K2002]: Expected ')', got numeric literal '1'
  --> /Users/kakurega/dev/projects/kessel/tests/runners/../fixtures/recovery/declarations/002_class_member_broken.js:4:12
   |
 4 |     return 1;
   |            ^
  = note: see TS1005

error[K2040]: Unexpected '}' — unmatched closing brace
  --> /Users/kakurega/dev/projects/kessel/tests/runners/../fixtures/recovery/declarations/002_class_member_broken.js:6:1
   |
 6 | }
   | ^

--- Statistics ---
Arena: used=39936B reserved=16777216B ratio=0%
Parse errors: 4
